fix: fix post-meta spacing

--- a/packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
+++ b/packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
@@ -2,13 +2,13 @@ $name-: 'c-post-meta' !default;
 
 $host: (
   '.c-post-meta': (
-    gap: var(--spacing-m),
+    gap: var(--ks-spacing-m),
   ),
 ) !default;
 
 $item: (
   '.c-post-meta': (
-    gap: var(--spacing-xs),
+    gap: var(--ks-spacing-xs),
     font: var(--ks-font-ui-s),
     color: var(--color-grey-6),
     icon-size: 1.2em,
